<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_alias"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/sign_alias"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_alias"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_key_pass"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/sign_key_pass"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/layout_alias">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_key_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_store_pass"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/sign_store_pass"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/layout_key_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_store_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cn"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/sign_common_name"
            app:layout_constraintEnd_toStartOf="@id/layout_org"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_store_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_org"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_organization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_cn"
            app:layout_constraintTop_toBottomOf="@id/layout_store_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_org"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_country"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/sign_country"
            app:layout_constraintEnd_toStartOf="@id/layout_validity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_cn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_validity"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/sign_validity_years"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_country"
            app:layout_constraintTop_toBottomOf="@id/layout_cn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_validity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_regenerate"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_regenerate_key"
            app:icon="@drawable/build"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/layout_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
